--- a/client/app/app.less
+++ b/client/app/app.less
@@ -1,6 +1,7 @@
 @import '~bootstrap/less/bootstrap.less';
 @import '~bootstrap-social/bootstrap-social.less';
 @import '~font-awesome/less/font-awesome.less';
+@import '~angular-material/angular-material.min.css';
 
 @icon-font-path: '/assets/fonts/bootstrap/';
 @fa-font-path: '/assets/fonts/font-awesome/';
