--- a/client/app/app.less
+++ b/client/app/app.less
@@ -3,8 +3,8 @@
 @import '~font-awesome/less/font-awesome.less';
 @import '~angular-material/angular-material.min.css';
 
-@icon-font-path: '/assets/fonts/bootstrap/';
-@fa-font-path: '/assets/fonts/font-awesome/';
+@icon-font-path: '~bootstrap/fonts/';
+@fa-font-path: '~font-awesome/fonts/';
 
 /**
  * App-wide Styles
