--- a/client/app/app.less
+++ b/client/app/app.less
@@ -18,6 +18,8 @@
 }
 
 /* inject:less */
-@import 'admin/admin.less';
-@import 'main/main.less';
+@import 'admin/admin';
+@import 'main/main';
+@import '../components/footer/footer';
+@import '../components/oauth-buttons/oauth-buttons';
 /* endinject */
